--- a/kube/frontend.yaml
+++ b/kube/frontend.yaml
@@ -2,29 +2,31 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: main
-  name: main
+    service: frontend
+  name: frontend
+  namespace: microservice
 spec:
   ports:
   - name: "80"
     port: 80
     targetPort: 8080
   selector:
-    service: main
+    service: frontend
   type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    service: main
-  name: main
+    service: frontend
+  name: frontend
+  namespace: microservice
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        service: main
+        service: frontend
     spec:
       containers:
       - env:
@@ -48,7 +50,7 @@ spec:
           value: "50051"
         - name: ZEEBE_SERVICE_ENDPOINT
           value: zeebe:26500
-        image: gcr.io/[PROJECT_ID]/hipster-microservice
-        name: hipster
+        image: gcr.io/cloud-solutions-images/ecomm-frontend
+        name: frontend
         ports:
         - containerPort: 8080
