--- a/kube/zeebe.yaml
+++ b/kube/zeebe.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     service: zeebe
   name: zeebe
+  namespace: microservice
 spec:
   ports:
   - name: "26500"
@@ -18,6 +19,7 @@ metadata:
   labels:
     service: zeebe
   name: zeebe
+  namespace: microservice
 spec:
   replicas: 1
   template:
