--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>demo</groupId>
-	<artifactId>hipster</artifactId>
+	<artifactId>ecomm</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
