--- a/kube/recommendation.yaml
+++ b/kube/recommendation.yaml
@@ -32,6 +32,7 @@ spec:
         - name: GCP_PROJECT_ID
           value: [PROJECT_ID]
         image: gcr.io/cloud-solutions-images/ecomm-recommendation
+        imagePullPolicy: Always
         name: recommendation
         ports:
         - containerPort: 50051
